Results/spots/c5.large/ap-south-1/3fae799be48098f41dea79cd4fbfab1f37edf812/tempSecGroup.json
{
    "IpPermissionsEgress": [
        {
            "IpProtocol": "-1", 
            "PrefixListIds": [], 
            "IpRanges": [
                {
                    "CidrIp": "0.0.0.0/0"
                }
            ], 
            "UserIdGroupPairs": [], 
            "Ipv6Ranges": []
        }
    ], 
    "Description": "temporary sec group", 
    "IpPermissions": [
        {
            "PrefixListIds": [], 
            "FromPort": 22, 
            "IpRanges": [
                {
                    "CidrIp": "0.0.0.0/0"
                }
            ], 
            "ToPort": 22, 
            "IpProtocol": "tcp", 
            "UserIdGroupPairs": [], 
            "Ipv6Ranges": []
        }
    ], 
    "GroupName": "temp-time-mes", 
    "VpcId": "vpc-c2fabcaa", 
    "OwnerId": "530329064002", 
    "GroupId": "sg-0d99bd12392c98023"
}
